agrego transformaciones y animaciones

--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
             </p>
         </section>
         <section class="grid-video">
-            <video class="grid-video-item" src="./assets/videos/Avengers Endgame.mp4" controls autoplay muted></video>
-            <video class="grid-video-item" src="./assets/videos/Black Widow.mp4" controls autoplay muted></video>
+            <video class="grid-video-item" src="./assets/videos/Avengers Endgame.mp4" controls autoplay muted loop></video>
+            <video class="grid-video-item" src="./assets/videos/Black Widow.mp4" controls autoplay muted loop></video>
         </section>
     </main>
     <footer>
