--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class=" container  " href="./index.html">
             <img class="img-fluid" src="./assets/images/mcu.png" alt="MCU-Home" >
         </div>
-        
+
         <h2 class="bg-danger bg-gradient text-white text-center">Un universo de peliculas Heroicas</h2>
 
         <nav class="navbar navbar-expand-sm bg-secondary text-black ">
@@ -40,28 +40,31 @@
     </header>
 
     <main class="parallax">
+
+        <div class="container ">
+            <div class="row p-2">
+                <a class="col-sm-7" href="https://en.wikipedia.org/wiki/Tony_Stark_(Marvel_Cinematic_Universe)" target="_blank">
+                 <img class="d-block w-100 h-100" src="./assets/gif/ironman.gif" alt="ironman"  />
+                </a>
+                <a class="col-sm-5" href="https://en.wikipedia.org/wiki/Steve_Rogers_(Marvel_Cinematic_Universe)" target="_blank">
+                    <img class="d-block w-100 h-100" src="./assets/gif/capitan.gif" alt="capitan" />
+                </a>
+            </div>
+            <div class="row p-2">
+              <a class="col-sm-3" href="https://en.wikipedia.org/wiki/Thor_(Marvel_Cinematic_Universe)" target="_blank">
+                <img class="d-block w-100 h-100"  src="./assets/gif/thor.gif" alt="thor"  />
+              </a>
+              <a class="col-sm-3" href="https://en.wikipedia.org/wiki/Bruce_Banner_(Marvel_Cinematic_Universe)" target="_blank">
+                <img class="d-block w-100 h-100"  src="./assets/gif/hulk.gif" alt="hulk"  />
+              </a>
+              <a class="col-sm-6" href="https://en.wikipedia.org/wiki/Natasha_Romanoff_(Marvel_Cinematic_Universe)" target="_blank">
+                <img class="d-block w-100 h-100 "  src="./assets/gif/nat.gif" alt="natasha"  />
+              </a>
+            </div>
+          </div>    
         <div >
 
-            <section class="estilo-section-div1" >
-                <a class="grid__item" href="https://en.wikipedia.org/wiki/Tony_Stark_(Marvel_Cinematic_Universe)" target="_blank">
-                    <img class="grid__item-img"  src="./assets/gif/ironman.gif" alt="ironman"  />
-                </a>
-                <a class="grid__item" href="https://en.wikipedia.org/wiki/Steve_Rogers_(Marvel_Cinematic_Universe)" target="_blank">
-                    <img class="grid__item-img" src="./assets/gif/capitan.gif" alt="capitan" />
-                </a>
-            </section>
-
-            <section class="estilo-section-div2" >
-                <a class="grid__item" href="https://en.wikipedia.org/wiki/Thor_(Marvel_Cinematic_Universe)" target="_blank">
-                    <img class="grid__item-img"  src="./assets/gif/thor.gif" alt="thor"  />
-                </a>
-                <a class="grid__item" href="https://en.wikipedia.org/wiki/Bruce_Banner_(Marvel_Cinematic_Universe)" target="_blank">
-                    <img class="grid__item-img"  src="./assets/gif/hulk.gif" alt="hulk"  />
-                </a>
-                <a class="grid__item" href="https://en.wikipedia.org/wiki/Natasha_Romanoff_(Marvel_Cinematic_Universe)" target="_blank">
-                    <img class="grid__item-img"  src="./assets/gif/nat.gif" alt="natasha"  />
-                </a>
-            </section>
+            
         </div>
         <section>
             <p class="texto-p">El Universo cinematográfico de Marvel (MCU; en inglés, Marvel Cinematic Universe) es una
