--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 
             
         </div>
-        <section>
-            <p class="texto-p">El Universo cinematográfico de Marvel (MCU; en inglés, Marvel Cinematic Universe) es una
+        <section class="container">
+            <p class="lead text-white">El Universo cinematográfico de Marvel (MCU; en inglés, Marvel Cinematic Universe) es una
                 franquicia de
                 medios y un universo
                 compartido, centrada en una serie de películas de superhéroes producidas independientemente por Marvel
@@ -83,10 +83,16 @@
                 algo no visto antes en el cine de superhéroes.
             </p>
         </section>
-        <section class="grid-video">
-            <video class="grid-video-item" src="./assets/videos/Avengers Endgame.mp4" controls autoplay muted loop></video>
-            <video class="grid-video-item" src="./assets/videos/Black Widow.mp4" controls autoplay muted loop></video>
-        </section>
+        <div class="container p-2">
+            <div class="row p-6">
+              <div class="col-sm-6">
+                <video class="container" src="./assets/videos/Avengers Endgame.mp4" controls autoplay muted loop></video>
+              </div>
+              <div class="col-sm-6">
+                <video class="container" src="./assets/videos/Black Widow.mp4" controls autoplay muted loop></video>
+              </div>
+            </div>
+        </div>
     </main>
     <footer>
         <section class="footer">
