--- a/index.html
+++ b/index.html
@@ -94,28 +94,32 @@
             </div>
         </div>
     </main>
-    <footer>
-        <section class="footer">
-            <a href="https://www.instagram.com/" target="_blank">
-                <img class="estilo-a-footer" src="./assets/images/instagram.png" alt="instagram" />
-            </a>
-            <a href="https://twitter.com/?lang=es" target="_blank">
-                <img class="estilo-a-footer" src="./assets/images/twitter.png" alt="twitter" />
-            </a>
-            <a href="https://www.facebook.com/" target="_blank">
-                <img class="estilo-a-footer" src="./assets/images/facebook.png" alt="facebook" />
-            </a>
-            <a href="https://www.whatsapp.com/" target="_blank">
-                <img class="estilo-a-footer" src="./assets/images/whatsapp.png" alt="whatsapp" />
-            </a>
-            <h4>&copy 2022, MITCH todos los derechos reservados</h4>
-         
-            <label for="suscripcion">Suscribite a nuestro newsletter:</label>
-            <input type="email" id="correo" name="correo" placeholder="Ingrese su mail" />
-            <button type="submit">Enviar</button>
+    <footer class="bg-danger">
+        <div class="container p-2">
+            
+            <div class="row p-3 justify-content-center">
+              <a class="col-sm-1" href="https://www.instagram.com/" target="_blank">
+                <img class=" img-fluid d-block w-100" src="./assets/images/instagram.png" alt="instagram" />
+              </a>
+              <a class="col-sm-1 " href="https://twitter.com/?lang=es" target="_blank">
+                <img class="img-fluid d-block w-100" src="./assets/images/twitter.png" alt="twitter" />
+              </a>
+              <a class="col-sm-1 " href="https://www.facebook.com/" target="_blank">
+                <img class="d-block w-100" src="./assets/images/facebook.png" alt="facebook" />
+              </a>
+              <a class="col-sm-1 " href="https://www.whatsapp.com/" target="_blank">
+                <img class="d-block w-100" src="./assets/images/whatsapp.png" alt="whatsapp" />
+              </a>
+            </div>
 
-        </section>
+            <h4 class="text-center">&copy 2022, MITCH todos los derechos reservados</h4>
 
+            <div class="text-center">
+             <label  for="suscripcion">Suscribite a nuestro newsletter:</label>
+             <input type="email" id="correo" name="correo" placeholder="Ingrese su mail" />
+             <button type="submit">Enviar</button>
+            </div>
+        </div>
     </footer>
 </body>
 
