agrego animaciones, elimino Css obsoleto

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="./js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body>
+<body >
     <header class="bg-black">
-        <div class=" container  " href="./index.html">
+        <div class=" container " href="./index.html">
             <img class="img-fluid" src="./assets/images/mcu.png" alt="MCU-Home" >
         </div>
 
-        <h2 class="bg-danger bg-gradient text-white text-center">Un universo de peliculas Heroicas</h2>
+        <h2 class="bg-danger bg-gradient text-white text-center opacity-75">Un universo de peliculas Heroicas</h2>
 
         <nav class="navbar navbar-expand-sm bg-secondary text-black ">
             <div class="container">
@@ -29,10 +29,10 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
-                  <a class="nav-link" href="./pages/peliculas.html">Peliculas</a>
-                  <a class="nav-link" href="./pages/cronologia.html">Cronologia</a>
-                  <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+                  <a class="nav-link active shadow " aria-current="page" href="./index.html">Home</a>
+                  <a class="nav-link shadow    " href="./pages/peliculas.html">Peliculas</a>
+                  <a class="nav-link shadow" href="./pages/cronologia.html">Cronologia</a>
+                  <a class="nav-link shadow" href="./pages/contacto.html">Contacto</a>
                 </div>
               </div>
             </div>
@@ -43,21 +43,21 @@
 
         <div class="container ">
             <div class="row p-2">
-                <a class="col-sm-7" href="https://en.wikipedia.org/wiki/Tony_Stark_(Marvel_Cinematic_Universe)" target="_blank">
+                <a class="col-sm-7 grid__item" href="https://en.wikipedia.org/wiki/Tony_Stark_(Marvel_Cinematic_Universe)" target="_blank">
                  <img class="d-block w-100 h-100" src="./assets/gif/ironman.gif" alt="ironman"  />
                 </a>
-                <a class="col-sm-5" href="https://en.wikipedia.org/wiki/Steve_Rogers_(Marvel_Cinematic_Universe)" target="_blank">
+                <a class="col-sm-5 grid__item" href="https://en.wikipedia.org/wiki/Steve_Rogers_(Marvel_Cinematic_Universe)" target="_blank">
                     <img class="d-block w-100 h-100" src="./assets/gif/capitan.gif" alt="capitan" />
                 </a>
             </div>
-            <div class="row p-2">
-              <a class="col-sm-3" href="https://en.wikipedia.org/wiki/Thor_(Marvel_Cinematic_Universe)" target="_blank">
+            <div class="row p-2 ">
+              <a class="col-sm-3 grid__item" href="https://en.wikipedia.org/wiki/Thor_(Marvel_Cinematic_Universe)" target="_blank">
                 <img class="d-block w-100 h-100"  src="./assets/gif/thor.gif" alt="thor"  />
               </a>
-              <a class="col-sm-3" href="https://en.wikipedia.org/wiki/Bruce_Banner_(Marvel_Cinematic_Universe)" target="_blank">
+              <a class="col-sm-3 grid__item" href="https://en.wikipedia.org/wiki/Bruce_Banner_(Marvel_Cinematic_Universe)" target="_blank">
                 <img class="d-block w-100 h-100"  src="./assets/gif/hulk.gif" alt="hulk"  />
               </a>
-              <a class="col-sm-6" href="https://en.wikipedia.org/wiki/Natasha_Romanoff_(Marvel_Cinematic_Universe)" target="_blank">
+              <a class="col-sm-6 grid__item" href="https://en.wikipedia.org/wiki/Natasha_Romanoff_(Marvel_Cinematic_Universe)" target="_blank">
                 <img class="d-block w-100 h-100 "  src="./assets/gif/nat.gif" alt="natasha"  />
               </a>
             </div>
@@ -94,25 +94,25 @@
             </div>
         </div>
     </main>
-    <footer class="bg-danger">
+    <footer class="bg-danger opacity-60">
         <div class="container p-2">
             
             <div class="row p-3 justify-content-center">
-              <a class="col-sm-1" href="https://www.instagram.com/" target="_blank">
+              <a class="col-sm-1 estilo-a-footer" href="https://www.instagram.com/" target="_blank">
                 <img class=" img-fluid d-block w-100" src="./assets/images/instagram.png" alt="instagram" />
               </a>
-              <a class="col-sm-1 " href="https://twitter.com/?lang=es" target="_blank">
+              <a class="col-sm-1 estilo-a-footer" href="https://twitter.com/?lang=es" target="_blank">
                 <img class="img-fluid d-block w-100" src="./assets/images/twitter.png" alt="twitter" />
               </a>
-              <a class="col-sm-1 " href="https://www.facebook.com/" target="_blank">
+              <a class="col-sm-1 estilo-a-footer" href="https://www.facebook.com/" target="_blank">
                 <img class="d-block w-100" src="./assets/images/facebook.png" alt="facebook" />
               </a>
-              <a class="col-sm-1 " href="https://www.whatsapp.com/" target="_blank">
+              <a class="col-sm-1 estilo-a-footer" href="https://www.whatsapp.com/" target="_blank">
                 <img class="d-block w-100" src="./assets/images/whatsapp.png" alt="whatsapp" />
               </a>
             </div>
 
-            <h4 class="text-center">&copy 2022, MITCH todos los derechos reservados</h4>
+            <h4 class="text-center p-4">&copy 2022, MITCH todos los derechos reservados</h4>
 
             <div class="text-center">
              <label  for="suscripcion">Suscribite a nuestro newsletter:</label>
