--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,10 +15,10 @@
 
 <body>
     <header class="bg-black">
-        <a class=" container  " href="../index.html">
+        <div class=" container  " href="../index.html">
             <img class="img-fluid" src="../assets/images/mcu.png" alt="MCU-Home" >
           
-        </a>
+        </div>
 
         <h2 class="bg-danger bg-gradient text-white text-center">Un universo de peliculas Heroicas</h2>
 
