--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
 
         <h2 class="bg-danger bg-gradient text-white text-center opacity-75">Un universo de peliculas Heroicas</h2>
 
-        <nav class="navbar navbar-expand-sm bg-secondary text-black ">
+        <nav class="navbar navbar-expand-sm bg-secondary text-black  ">
             <div class="container">
               <a class="navbar-brand" href="#"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+              <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active shadow " aria-current="page" href="./index.html">Home</a>
-                  <a class="nav-link shadow    " href="./pages/peliculas.html">Peliculas</a>
-                  <a class="nav-link shadow" href="./pages/cronologia.html">Cronologia</a>
-                  <a class="nav-link shadow" href="./pages/contacto.html">Contacto</a>
+                <div class="navbar-nav ">
+                  <a class="nav-link active shadow bg-light bg-opacity-50 " aria-current="page" href="./index.html">Home</a>
+                  <a class="nav-link shadow bg-light bg-opacity-50   " href="./pages/peliculas.html">Peliculas</a>
+                  <a class="nav-link shadow bg-light bg-opacity-50 " href="./pages/cronologia.html">Cronologia</a>
+                  <a class="nav-link shadow bg-light bg-opacity-50 " href="./pages/contacto.html">Contacto</a>
                 </div>
               </div>
             </div>
