--- a/pages/cronologia.html
+++ b/pages/cronologia.html
@@ -29,10 +29,10 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-                  <a class="nav-link" href="./peliculas.html">Peliculas</a>
-                  <a class="nav-link" href="./cronologia.html">Cronologia</a>
-                  <a class="nav-link" href="./contacto.html">Contacto</a>
+                  <a class="nav-link active shadow bg-light bg-opacity-50" aria-current="page" href="../index.html">Home</a>
+                  <a class="nav-link shadow bg-light bg-opacity-50" href="./peliculas.html">Peliculas</a>
+                  <a class="nav-link shadow bg-light bg-opacity-50" href="./cronologia.html">Cronologia</a>
+                  <a class="nav-link shadow bg-light bg-opacity-50" href="./contacto.html">Contacto</a>
                 </div>
               </div>
             </div>
@@ -94,16 +94,16 @@
         <div class="container p-2">
             
             <div class="row p-3 justify-content-center">
-              <a class="col-sm-1" href="https://www.instagram.com/" target="_blank">
+              <a class="col-sm-1 estilo-a-footer" href="https://www.instagram.com/" target="_blank">
                 <img class=" img-fluid d-block w-100" src="../assets/images/instagram.png" alt="instagram" />
               </a>
-              <a class="col-sm-1 " href="https://twitter.com/?lang=es" target="_blank">
+              <a class="col-sm-1 estilo-a-footer " href="https://twitter.com/?lang=es" target="_blank">
                 <img class="img-fluid d-block w-100" src="../assets/images/twitter.png" alt="twitter" />
               </a>
-              <a class="col-sm-1 " href="https://www.facebook.com/" target="_blank">
+              <a class="col-sm-1 estilo-a-footer " href="https://www.facebook.com/" target="_blank">
                 <img class="d-block w-100" src="../assets/images/facebook.png" alt="facebook" />
               </a>
-              <a class="col-sm-1 " href="https://www.whatsapp.com/" target="_blank">
+              <a class="col-sm-1 estilo-a-footer" href="https://www.whatsapp.com/" target="_blank">
                 <img class="d-block w-100" src="../assets/images/whatsapp.png" alt="whatsapp" />
               </a>
             </div>
