--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h2 class="bg-danger bg-gradient text-white text-center opacity-75">Un universo de peliculas Heroicas</h2>
 
         <nav class="navbar navbar-expand-sm bg-secondary text-black  ">
-            <div class="container">
+            <div class="container ">
               <a class="navbar-brand" href="#"></a>
               <button class="navbar-toggler " type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -98,16 +98,16 @@
         <div class="container p-2">
             
             <div class="row p-3 justify-content-center">
-              <a class="col-1" href="https://www.instagram.com/" target="_blank">
+              <a class="col-1 estilo-a-footer" href="https://www.instagram.com/" target="_blank">
                 <img class=" img-fluid d-block w-100" src="./assets/images/instagram.png" alt="instagram" />
               </a>
-              <a class="col-1 " href="https://twitter.com/?lang=es" target="_blank">
+              <a class="col-1 estilo-a-footer " href="https://twitter.com/?lang=es" target="_blank">
                 <img class="img-fluid d-block w-100" src="./assets/images/twitter.png" alt="twitter" />
               </a>
-              <a class="col-1 " href="https://www.facebook.com/" target="_blank">
+              <a class="col-1 estilo-a-footer " href="https://www.facebook.com/" target="_blank">
                 <img class="d-block w-100" src="./assets/images/facebook.png" alt="facebook" />
               </a>
-              <a class="col-1 " href="https://www.whatsapp.com/" target="_blank">
+              <a class="col-1 estilo-a-footer" href="https://www.whatsapp.com/" target="_blank">
                 <img class="d-block w-100" src="./assets/images/whatsapp.png" alt="whatsapp" />
               </a>
             </div>
