terminada pagina index

--- a/index.html
+++ b/index.html
@@ -43,21 +43,21 @@
 
         <div class="container ">
             <div class="row p-2">
-                <a class="col-sm-7 grid__item" href="https://en.wikipedia.org/wiki/Tony_Stark_(Marvel_Cinematic_Universe)" target="_blank">
+                <a class="col-sm-12 col-md-12 col-lg-7 grid__item" href="https://en.wikipedia.org/wiki/Tony_Stark_(Marvel_Cinematic_Universe)" target="_blank">
                  <img class="d-block w-100 h-100" src="./assets/gif/ironman.gif" alt="ironman"  />
                 </a>
-                <a class="col-sm-5 grid__item" href="https://en.wikipedia.org/wiki/Steve_Rogers_(Marvel_Cinematic_Universe)" target="_blank">
+                <a class="col-sm-12 col-md-12 col-lg-5 grid__item" href="https://en.wikipedia.org/wiki/Steve_Rogers_(Marvel_Cinematic_Universe)" target="_blank">
                     <img class="d-block w-100 h-100" src="./assets/gif/capitan.gif" alt="capitan" />
                 </a>
             </div>
             <div class="row p-2 ">
-              <a class="col-sm-3 grid__item" href="https://en.wikipedia.org/wiki/Thor_(Marvel_Cinematic_Universe)" target="_blank">
+              <a class="col-sm-12 col-md-12 col-lg-3 grid__item" href="https://en.wikipedia.org/wiki/Thor_(Marvel_Cinematic_Universe)" target="_blank">
                 <img class="d-block w-100 h-100"  src="./assets/gif/thor.gif" alt="thor"  />
               </a>
-              <a class="col-sm-3 grid__item" href="https://en.wikipedia.org/wiki/Bruce_Banner_(Marvel_Cinematic_Universe)" target="_blank">
+              <a class="col-sm-12 col-md-12 col-lg-3 grid__item" href="https://en.wikipedia.org/wiki/Bruce_Banner_(Marvel_Cinematic_Universe)" target="_blank">
                 <img class="d-block w-100 h-100"  src="./assets/gif/hulk.gif" alt="hulk"  />
               </a>
-              <a class="col-sm-6 grid__item" href="https://en.wikipedia.org/wiki/Natasha_Romanoff_(Marvel_Cinematic_Universe)" target="_blank">
+              <a class="col-sm-12 col-md-12 col-lg-6 grid__item" href="https://en.wikipedia.org/wiki/Natasha_Romanoff_(Marvel_Cinematic_Universe)" target="_blank">
                 <img class="d-block w-100 h-100 "  src="./assets/gif/nat.gif" alt="natasha"  />
               </a>
             </div>
@@ -85,10 +85,10 @@
         </section>
         <div class="container p-2">
             <div class="row p-6">
-              <div class="col-sm-6">
+              <div class="col-sm-12 col-md-12 col-lg-6">
                 <video class="container" src="./assets/videos/Avengers Endgame.mp4" controls autoplay muted loop></video>
               </div>
-              <div class="col-sm-6">
+              <div class="col-sm-12 col-md-12 col-lg-6">
                 <video class="container" src="./assets/videos/Black Widow.mp4" controls autoplay muted loop></video>
               </div>
             </div>
@@ -97,20 +97,20 @@
     <footer class="bg-danger opacity-60">
         <div class="container p-2">
             
-            <div class="row p-3 justify-content-center">
-              <a class="col-1 estilo-a-footer" href="https://www.instagram.com/" target="_blank">
-                <img class=" img-fluid d-block w-100" src="./assets/images/instagram.png" alt="instagram" />
-              </a>
-              <a class="col-1 estilo-a-footer " href="https://twitter.com/?lang=es" target="_blank">
-                <img class="img-fluid d-block w-100" src="./assets/images/twitter.png" alt="twitter" />
-              </a>
-              <a class="col-1 estilo-a-footer " href="https://www.facebook.com/" target="_blank">
-                <img class="d-block w-100" src="./assets/images/facebook.png" alt="facebook" />
-              </a>
-              <a class="col-1 estilo-a-footer" href="https://www.whatsapp.com/" target="_blank">
-                <img class="d-block w-100" src="./assets/images/whatsapp.png" alt="whatsapp" />
-              </a>
-            </div>
+          <div class="row p-5 ">
+            <a class="col-sm-12 col-md-6 col-lg-3 estilo-a-footer  " href="https://www.instagram.com/" target="_blank">
+              <img class=" img-fluid d-block w-50 p-2  " src="../assets/images/instagram.png" alt="instagram" />
+            </a>
+            <a class="col-sm-12 col-md-6 col-lg-3 estilo-a-footer " href="https://twitter.com/?lang=es" target="_blank">
+              <img class="img-fluid d-block w-50 p-2" src="../assets/images/twitter.png" alt="twitter" />
+            </a>
+            <a class="col-sm-12 col-md-6 col-lg-3 estilo-a-footer " href="https://www.facebook.com/" target="_blank">
+              <img class="img-fluid d-block w-50 p-2" src="../assets/images/facebook.png" alt="facebook" />
+            </a>
+            <a class="col-sm-12 col-md-6 col-lg-3 estilo-a-footer" href="https://www.whatsapp.com/" target="_blank">
+              <img class="img-fluid d-block w-50 p-2" src="../assets/images/whatsapp.png" alt="whatsapp" />
+            </a>
+          </div>
 
             <h4 class="text-center p-4">&copy 2022, MITCH todos los derechos reservados</h4>
 
