--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -63,20 +63,20 @@
     <footer class="bg-danger">
         <div class="container p-2">
             
-            <div class="row p-3 justify-content-center">
-              <a class="col-sm-1 estilo-a-footer" href="https://www.instagram.com/" target="_blank">
-                <img class=" img-fluid d-block w-100" src="../assets/images/instagram.png" alt="instagram" />
-              </a>
-              <a class="col-sm-1 estilo-a-footer" href="https://twitter.com/?lang=es" target="_blank">
-                <img class="img-fluid d-block w-100" src="../assets/images/twitter.png" alt="twitter" />
-              </a>
-              <a class="col-sm-1 estilo-a-footer" href="https://www.facebook.com/" target="_blank">
-                <img class="d-block w-100" src="../assets/images/facebook.png" alt="facebook" />
-              </a>
-              <a class="col-sm-1 estilo-a-footer" href="https://www.whatsapp.com/" target="_blank">
-                <img class="d-block w-100" src="../assets/images/whatsapp.png" alt="whatsapp" />
-              </a>
-            </div>
+          <div class="row p-5 justify-content-center">
+            <a class="col-sm-12 col-md-6 col-lg-3 estilo-a-footer  " href="https://www.instagram.com/" target="_blank">
+              <img class=" d-block w-50 p-2  " src="../assets/images/instagram.png" alt="instagram" />
+            </a>
+            <a class="col-sm-12 col-md-6 col-lg-3 estilo-a-footer " href="https://twitter.com/?lang=es" target="_blank">
+              <img class="d-block w-50 p-2" src="../assets/images/twitter.png" alt="twitter" />
+            </a>
+            <a class="col-sm-12 col-md-6 col-lg-3 estilo-a-footer " href="https://www.facebook.com/" target="_blank">
+              <img class="d-block w-50 p-2" src="../assets/images/facebook.png" alt="facebook" />
+            </a>
+            <a class="col-sm-12 col-md-6 col-lg-3 estilo-a-footer" href="https://www.whatsapp.com/" target="_blank">
+              <img class=" d-block w-50 p-2" src="../assets/images/whatsapp.png" alt="whatsapp" />
+            </a>
+          </div>
 
             <h4 class="text-center">&copy 2022, MITCH todos los derechos reservados</h4>
 
