--- a/pages/cronologia.html
+++ b/pages/cronologia.html
@@ -44,10 +44,10 @@
         <div class="container ">
             <h2 class="text-white text-left ">Orden Cronologico</h2>
             <div class="row p-2">
-                <div class="col-sm-6">
+                <div class="col-sm-6 col-md-6">
                   <img class="d-block w-100 h-100" src="../assets/images/crono-recorte.JPG" alt="cronologia"  />
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-6 col-md-6">
                     <ol class="list-group list-group-numbered">
                         <li class="list-group-item">Capitan America:El Primer Vengador</li>
                         <li class="list-group-item">Capitana Marvel</li>
@@ -68,7 +68,7 @@
         <div class="container ">
             <h2 class="text-white text-left ">Orden de Estreno</h2>
             <div class="row p-2">
-                 <div class="col-sm-6">
+                 <div class="col-sm-6 col-md-6">
                     <ol class="list-group list-group-numbered">
                         <li class="list-group-item">2008: "Ironman", "El increible Hulk"</li>
                         <li class="list-group-item">2010: "Ironman 2"</li>
@@ -83,7 +83,7 @@
                         <li class="list-group-item">2019: "Capitana Marvel", "Vengadores: Endgame", "Spider-Man: Lejos de casa"</li>
                       </ol>
                 </div>
-                <div class="col-sm-6">
+                <div class="col-sm-6 col-md-6">
                     <img class="d-block w-100 h-100" src="../assets/images/aparicion-recorte.JPG" alt="aparicion"  />
                   </div>
             </div>     
@@ -93,20 +93,20 @@
     <footer class="bg-danger">
         <div class="container p-2">
             
-            <div class="row p-3 justify-content-center">
-              <a class="col-sm-1 estilo-a-footer" href="https://www.instagram.com/" target="_blank">
-                <img class=" img-fluid d-block w-100" src="../assets/images/instagram.png" alt="instagram" />
-              </a>
-              <a class="col-sm-1 estilo-a-footer " href="https://twitter.com/?lang=es" target="_blank">
-                <img class="img-fluid d-block w-100" src="../assets/images/twitter.png" alt="twitter" />
-              </a>
-              <a class="col-sm-1 estilo-a-footer " href="https://www.facebook.com/" target="_blank">
-                <img class="d-block w-100" src="../assets/images/facebook.png" alt="facebook" />
-              </a>
-              <a class="col-sm-1 estilo-a-footer" href="https://www.whatsapp.com/" target="_blank">
-                <img class="d-block w-100" src="../assets/images/whatsapp.png" alt="whatsapp" />
-              </a>
-            </div>
+          <div class="row p-5 justify-content-center">
+            <a class="col-sm-12 col-md-6 col-lg-3 estilo-a-footer  " href="https://www.instagram.com/" target="_blank">
+              <img class=" d-block w-50 p-2  " src="../assets/images/instagram.png" alt="instagram" />
+            </a>
+            <a class="col-sm-12 col-md-6 col-lg-3 estilo-a-footer " href="https://twitter.com/?lang=es" target="_blank">
+              <img class="d-block w-50 p-2" src="../assets/images/twitter.png" alt="twitter" />
+            </a>
+            <a class="col-sm-12 col-md-6 col-lg-3 estilo-a-footer " href="https://www.facebook.com/" target="_blank">
+              <img class="d-block w-50 p-2" src="../assets/images/facebook.png" alt="facebook" />
+            </a>
+            <a class="col-sm-12 col-md-6 col-lg-3 estilo-a-footer" href="https://www.whatsapp.com/" target="_blank">
+              <img class=" d-block w-50 p-2" src="../assets/images/whatsapp.png" alt="whatsapp" />
+            </a>
+          </div>
 
             <h4 class="text-center">&copy 2022, MITCH todos los derechos reservados</h4>
 
