--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
     <footer class="bg-danger opacity-60">
         <div class="container p-2">
             
-          <div class="row p-5 justify-content-center">
+          <div class="row p-5 ">
             <a class="col-sm-12 col-md-6 col-lg-3 estilo-a-footer  " href="https://www.instagram.com/" target="_blank">
-              <img class=" d-block w-50 p-2  " src="../assets/images/instagram.png" alt="instagram" />
+              <img class="d-block  w-50 p-2  " src="../assets/images/instagram.png" alt="instagram" />
             </a>
             <a class="col-sm-12 col-md-6 col-lg-3 estilo-a-footer " href="https://twitter.com/?lang=es" target="_blank">
               <img class="d-block w-50 p-2" src="../assets/images/twitter.png" alt="twitter" />
