--- a/pages/cronologia.html
+++ b/pages/cronologia.html
@@ -44,10 +44,10 @@
         <div class="container ">
             <h2 class="text-white text-left ">Orden Cronologico</h2>
             <div class="row p-2">
-                <div class="col-sm-6 col-md-6">
+                <div class="col-sm-12 col-md-12 col-xl-12 p-3">
                   <img class="d-block w-100 h-100" src="../assets/images/crono-recorte.JPG" alt="cronologia"  />
                 </div>
-                <div class="col-sm-6 col-md-6">
+                <div class="col-sm-12 col-md-12 col-xl-12">
                     <ol class="list-group list-group-numbered">
                         <li class="list-group-item">Capitan America:El Primer Vengador</li>
                         <li class="list-group-item">Capitana Marvel</li>
@@ -68,7 +68,7 @@
         <div class="container ">
             <h2 class="text-white text-left ">Orden de Estreno</h2>
             <div class="row p-2">
-                 <div class="col-sm-6 col-md-6">
+                 <div class="col-sm-12 col-md-12 col-xl-12 ">
                     <ol class="list-group list-group-numbered">
                         <li class="list-group-item">2008: "Ironman", "El increible Hulk"</li>
                         <li class="list-group-item">2010: "Ironman 2"</li>
@@ -83,7 +83,7 @@
                         <li class="list-group-item">2019: "Capitana Marvel", "Vengadores: Endgame", "Spider-Man: Lejos de casa"</li>
                       </ol>
                 </div>
-                <div class="col-sm-6 col-md-6">
+                <div class="col-sm-12 col-md-12 col-xl-12 p-3">
                     <img class="d-block w-100 h-100" src="../assets/images/aparicion-recorte.JPG" alt="aparicion"  />
                   </div>
             </div>     
