anidamiento con sass en video

--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                 algo no visto antes en el cine de superhéroes.
             </p>
         </section>
-        <section class="grid-video">
-            <video class="grid-video-item" src="./assets/videos/Avengers Endgame.mp4" controls autoplay muted loop></video>
-            <video class="grid-video-item" src="./assets/videos/Black Widow.mp4" controls autoplay muted loop></video>
+        <section class="grid__video">
+            <video class="grid__video-item" src="./assets/videos/Avengers Endgame.mp4" controls autoplay muted loop></video>
+            <video class="grid__video-item" src="./assets/videos/Black Widow.mp4" controls autoplay muted loop></video>
         </section>
     </main>
     <footer>
