Correccion de ruta de redes

--- a/index.html
+++ b/index.html
@@ -99,16 +99,16 @@
             
           <div class="row p-5 ">
             <a class="col-sm-12 col-md-6 col-lg-3 estilo-a-footer  " href="https://www.instagram.com/" target="_blank">
-              <img class="d-block  w-50 p-2  " src="../assets/images/instagram.png" alt="instagram" />
+              <img class="d-block  w-50 p-2  " src="./assets/images/instagram.png" alt="instagram" />
             </a>
             <a class="col-sm-12 col-md-6 col-lg-3 estilo-a-footer " href="https://twitter.com/?lang=es" target="_blank">
-              <img class="d-block w-50 p-2" src="../assets/images/twitter.png" alt="twitter" />
+              <img class="d-block w-50 p-2" src="./assets/images/twitter.png" alt="twitter" />
             </a>
             <a class="col-sm-12 col-md-6 col-lg-3 estilo-a-footer " href="https://www.facebook.com/" target="_blank">
-              <img class="d-block w-50 p-2" src="../assets/images/facebook.png" alt="facebook" />
+              <img class="d-block w-50 p-2" src="./assets/images/facebook.png" alt="facebook" />
             </a>
             <a class="col-sm-12 col-md-6 col-lg-3 estilo-a-footer" href="https://www.whatsapp.com/" target="_blank">
-              <img class=" d-block w-50 p-2" src="../assets/images/whatsapp.png" alt="whatsapp" />
+              <img class=" d-block w-50 p-2" src="./assets/images/whatsapp.png" alt="whatsapp" />
             </a>
           </div>
 
