agrego redes sociales en _variables @each en footer

--- a/index.html
+++ b/index.html
@@ -74,16 +74,16 @@
     <footer>
         <section class="footer">
             <a href="https://www.instagram.com/" target="_blank">
-                <img class="estilo-a-footer" src="./assets/images/instagram.png" alt="instagram" />
+                <img class="estilo-a-footer link-instagram" src="./assets/images/instagram.png" alt="instagram" />
             </a>
             <a href="https://twitter.com/?lang=es" target="_blank">
-                <img class="estilo-a-footer" src="./assets/images/twitter.png" alt="twitter" />
+                <img class="estilo-a-footer link-twitter" src="./assets/images/twitter.png" alt="twitter" />
             </a>
             <a href="https://www.facebook.com/" target="_blank">
-                <img class="estilo-a-footer" src="./assets/images/facebook.png" alt="facebook" />
+                <img class="estilo-a-footer link-facebook" src="./assets/images/facebook.png" alt="facebook" />
             </a>
             <a href="https://www.whatsapp.com/" target="_blank">
-                <img class="estilo-a-footer" src="./assets/images/whatsapp.png" alt="whatsapp" />
+                <img class="estilo-a-footer link-whatsapp" src="./assets/images/whatsapp.png" alt="whatsapp" />
             </a>
             <h4>&copy 2022, MITCH todos los derechos reservados</h4>
          
