--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <h2 class="subtitulo">Un universo de peliculas Heroicas</h2>
         <nav>
             <ul class="estilo-ul">
-                <li class="estilo-nav-li boton-nav"><a class="estilo-a" href="./index.html">Home</a></li>
-                <li class="estilo-nav-li boton-nav"><a class="estilo-a" href="./pages/peliculas.html">Peliculas</a></li>
-                <li class="estilo-nav-li boton-nav"><a class="estilo-a" href="./pages/cronologia.html">Cronologia</a></li>
-                <li class="estilo-nav-li boton-nav"><a class="estilo-a" href="./pages/contacto.html">Contacto</a></li>
+                <li class="estilo-nav-li  btn-index"><a class="estilo-a" href="./index.html">Home</a></li>
+                <li class="estilo-nav-li  btn-peliculas"><a class="estilo-a" href="./pages/peliculas.html">Peliculas</a></li>
+                <li class="estilo-nav-li  btn-cronologia"><a class="estilo-a" href="./pages/cronologia.html">Cronologia</a></li>
+                <li class="estilo-nav-li  btn-contacto"><a class="estilo-a" href="./pages/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
