agrego @mixin en parrafos del main

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </section>
         </div>
         <section>
-            <p class="texto-p">El Universo cinematográfico de Marvel (MCU; en inglés, Marvel Cinematic Universe) es una
+            <p class="texto1">El Universo cinematográfico de Marvel (MCU; en inglés, Marvel Cinematic Universe) es una
                 franquicia de
                 medios y un universo
                 compartido, centrada en una serie de películas de superhéroes producidas independientemente por Marvel
@@ -64,6 +64,12 @@
                 personajes comunes de la trama. La saga es pionera en unir a varios superhéroes y varios equipos de
                 ellos en un solo universo,
                 algo no visto antes en el cine de superhéroes.
+            </p>
+            <p class="texto2">La primera película del MCU es Iron Man (2008), que comenzó las películas de la Fase Uno culminando en la 
+                película crossover, The Avengers (2012). La Fase Dos comenzó con Iron Man 3 (2013) y concluyó con Ant-Man 
+                (2015). La Fase Tres comenzó con Captain America: Civil War (2016) y concluyó con Spider-Man: Lejos de
+                 casa (2019). Las primeras tres fases de la franquicia se conocen colectivamente como «La saga Infinity».
+                 Las películas de la Fase Cuatro comenzaron con Black Widow (2021).
             </p>
         </section>
         <section class="grid__video">
