--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,36 +8,25 @@
     <title>MCU-Contacto</title>
     <link rel="shortcut icon" href="../assets/images/favicon.ico" />
     <link rel="stylesheet" href="../css/style.css" />
-    <!--------------------------- bootstrap ------------------------------------------------------------->
-    <link rel="stylesheet" href="../css/bootstrap.min.css">
-    <script src="../js/bootstrap.bundle.min.js"></script>
+    
 </head>
 
 <body>
-    <header class="bg-black">
-        <div class=" container  " href="../index.html">
-            <img class="img-fluid" src="../assets/images/mcu.png" alt="MCU-Home" >
-          
-        </div>
+    <header>
+      <a class="grid-logo" href="./index.html">
+        <img class="grid-logo-item" src="../assets/images/mcu.png" alt="MCU-Home" >
+      </a>
 
-        <h2 class="bg-danger bg-gradient text-white text-center">Un universo de peliculas Heroicas</h2>
+      <h2 class="subtitulo">Un universo de peliculas Heroicas</h2>
 
-        <nav class="navbar navbar-expand-sm bg-secondary text-black ">
-            <div class="container">
-              <a class="navbar-brand" href="#"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active shadow bg-light bg-opacity-50" aria-current="page" href="../index.html">Home</a>
-                  <a class="nav-link shadow bg-light bg-opacity-50" href="./peliculas.html">Peliculas</a>
-                  <a class="nav-link shadow bg-light bg-opacity-50" href="./cronologia.html">Cronologia</a>
-                  <a class="nav-link shadow bg-light bg-opacity-50" href="./contacto.html">Contacto</a>
-                </div>
-              </div>
-            </div>
-          </nav>
+      <nav>
+        <ul class="estilo-ul">
+            <li class="estilo-nav-li  btn-index"><a class="estilo-a" href="../index.html">Home</a></li>
+            <li class="estilo-nav-li  btn-peliculas"><a class="estilo-a" href="./peliculas.html">Peliculas</a></li>
+            <li class="estilo-nav-li  btn-cronologia"><a class="estilo-a" href="./cronologia.html">Cronologia</a></li>
+            <li class="estilo-nav-li  btn-contacto"><a class="estilo-a" href="./contacto.html">Contacto</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main class="parallax">
