agrego SEO para optimizacion en motores de busqueda

--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MCU-Home</title>
+    <title>Universo Cinematografico de Marvel - Sus peliculas</title>
     <link rel="shortcut icon" href="./assets/images/favicon.ico" />
     <link rel="stylesheet" href="./css/style.css" />
+    <meta name="description" content="Una página que te cuenta el Universo de películas Marvel desde el principio.">
 </head>
 
 <body>
@@ -15,7 +16,7 @@
         <a class="grid-logo" href="./index.html">
             <img class="grid-logo-item" src="./assets/images/mcu.png" alt="MCU-Home" >
         </a>
-        <h2 class="subtitulo">Un universo de peliculas Heroicas</h2>
+        <h2 class="subtitulo">Un universo de películas Heroicas y sus protagonistas</h2>
         <nav>
             <ul class="estilo-ul">
                 <li class="estilo-nav-li  btn-index"><a class="estilo-a" href="./index.html">Home</a></li>
@@ -30,22 +31,22 @@
 
             <section class="estilo-section-div1" >
                 <a class="grid__item" href="https://en.wikipedia.org/wiki/Tony_Stark_(Marvel_Cinematic_Universe)" target="_blank">
-                    <img class="grid__item-img"  src="./assets/gif/ironman.gif" alt="ironman"  />
+                    <img class="grid__item-img"  src="./assets/gif/ironman.gif" alt="Película de Ironman"  />
                 </a>
                 <a class="grid__item" href="https://en.wikipedia.org/wiki/Steve_Rogers_(Marvel_Cinematic_Universe)" target="_blank">
-                    <img class="grid__item-img" src="./assets/gif/capitan.gif" alt="capitan" />
+                    <img class="grid__item-img" src="./assets/gif/capitan.gif" alt="Película de Capitán América" />
                 </a>
             </section>
 
             <section class="estilo-section-div2" >
                 <a class="grid__item" href="https://en.wikipedia.org/wiki/Thor_(Marvel_Cinematic_Universe)" target="_blank">
-                    <img class="grid__item-img"  src="./assets/gif/thor.gif" alt="thor"  />
+                    <img class="grid__item-img"  src="./assets/gif/thor.gif" alt="Película de Thor"  />
                 </a>
                 <a class="grid__item" href="https://en.wikipedia.org/wiki/Bruce_Banner_(Marvel_Cinematic_Universe)" target="_blank">
-                    <img class="grid__item-img"  src="./assets/gif/hulk.gif" alt="hulk"  />
+                    <img class="grid__item-img"  src="./assets/gif/hulk.gif" alt="Película de Hulk"  />
                 </a>
                 <a class="grid__item" href="https://en.wikipedia.org/wiki/Natasha_Romanoff_(Marvel_Cinematic_Universe)" target="_blank">
-                    <img class="grid__item-img"  src="./assets/gif/nat.gif" alt="natasha"  />
+                    <img class="grid__item-img"  src="./assets/gif/nat.gif" alt="Película de Natasha Romanoff"  />
                 </a>
             </section>
         </div>
