--- a/pages/peliculas.html
+++ b/pages/peliculas.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MCU-Peliculas</title>
+    <title>Universo Cinematografico de Marvel - Peliculas Directores Protagonistas</title>
     <link rel="shortcut icon" href="../assets/images/favicon.ico" />
     <link rel="stylesheet" href="../css/style.css" />
+    <meta name="description" content="Una página que te cuenta el Universo de películas Marvel, sus protagonistas e historia.">
     
 </head>
 
@@ -17,7 +18,7 @@
         <img class="grid-logo-item" src="../assets/images/mcu.png" alt="MCU-Home" >
       </a>
 
-      <h2 class="subtitulo">Un universo de peliculas Heroicas</h2>
+      <h2 class="subtitulo">Un universo de películas Heroicas y sus protagonistas</h2>
 
       <nav>
         <ul class="estilo-ul">
