--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MCU-Contacto</title>
+    <title>Universo Cinematografico de Marvel - Contacto para mas datos</title>
     <link rel="shortcut icon" href="../assets/images/favicon.ico" />
     <link rel="stylesheet" href="../css/style.css" />
     
@@ -17,7 +17,7 @@
         <img class="grid-logo-item" src="../assets/images/mcu.png" alt="MCU-Home" >
       </a>
 
-      <h2 class="subtitulo">Un universo de peliculas Heroicas</h2>
+      <h2 class="subtitulo">Un universo de películas Heroicas y sus protagonistas</h2>
 
       <nav>
         <ul class="estilo-ul">
