--- a/pages/cronologia.html
+++ b/pages/cronologia.html
@@ -35,11 +35,11 @@
         <div class="container ">
             <h2 class="h2-cronologia">Orden Cronologico</h2>
             <div class="estilo-section-crono">
-                <div class="crono-item">
-                  <img class="d-block w-100 h-100" src="../assets/images/crono-recorte.JPG" alt="cronologia"  />
+                <div >
+                  <img class="crono-item" src="../assets/images/crono-recorte.JPG" alt="cronologia"  />
                 </div>
-                <div class="crono-item">
-                    <ol class="list-group list-group-numbered crono-item">
+                <div >
+                    <ol class="crono-item">
                         <li class="list-group-item">Capitan America:El Primer Vengador</li>
                         <li class="list-group-item">Capitana Marvel</li>
                         <li class="list-group-item">Ironman</li>
@@ -59,8 +59,8 @@
         <div class="container ">
             <h2 class="h2-cronologia ">Orden de Estreno</h2>
             <div class="estilo-section-crono">
-                 <div class="crono-item">
-                    <ol class="list-group list-group-numbered ">
+                 <div >
+                    <ol class="crono-item">
                         <li class="list-group-item">2008: "Ironman", "El increible Hulk"</li>
                         <li class="list-group-item">2010: "Ironman 2"</li>
                         <li class="list-group-item">2011: "Thor", "Capitan America:El Primer Vengador"</li>
@@ -74,8 +74,8 @@
                         <li class="list-group-item">2019: "Capitana Marvel", "Vengadores: Endgame", "Spider-Man: Lejos de casa"</li>
                       </ol>
                 </div>
-                <div class="crono-item ">
-                    <img class="d-block w-100 h-100" src="../assets/images/aparicion-recorte.JPG" alt="aparicion"  />
+                <div >
+                    <img class="crono-item" src="../assets/images/aparicion-recorte.JPG" alt="aparicion"  />
                   </div>
             </div>     
         <div >   
