correccion de meta description en cantacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -8,6 +8,7 @@
     <title>Universo Cinematografico de Marvel - Contacto para mas datos</title>
     <link rel="shortcut icon" href="../assets/images/favicon.ico" />
     <link rel="stylesheet" href="../css/style.css" />
+    <meta name="description" content="Contáctanos y recibí toda la info de tus películas favoritas">
     
 </head>
 
