cambio de logo, agrego padding y justifico texto en texto 1 y 2, elimino codigo comentado

--- a/pages/peliculas.html
+++ b/pages/peliculas.html
@@ -18,7 +18,7 @@
         <img class="grid-logo-item" src="../assets/images/mcu.png" alt="MCU-Home" >
       </a>
 
-      <h2 class="subtitulo">Un universo de películas Heroicas y sus protagonistas</h2>
+      <h1 class="subtitulo">Un universo de películas Heroicas y sus protagonistas</h1>
 
       <nav>
         <ul class="estilo-ul">
@@ -32,12 +32,12 @@
     </header>
     <main class="parallax">
         <section class="section-table">
-            <h2 class="bg-danger bg-gradient text-white text-center">Peliculas</h2>
+            <h1>Peliculas</h1>
 
             
                 <table class="table">
                     <thead>
-                      <tr class="text-white table-thead-tr">
+                      <tr class="table-thead-tr">
                         <th scope="col">Nombre</th>
                         <th scope="col">Año</th>
                         <th scope="col">Protagonista</th>
@@ -47,7 +47,7 @@
                     </thead>
 
                     <tbody>
-                      <tr class="text-white table-tbody-tr">
+                      <tr class="table-tbody-tr">
                         <th scope="row">Ironman</th>
                         <td>2008</td>
                         <td>Robert Downey Jr</td>
@@ -57,7 +57,7 @@
                            </a>
                         </td>
                       </tr>
-                      <tr class="text-white table-tbody-tr2">
+                      <tr class="table-tbody-tr2">
                         <th scope="row">The Incredible Hulk</th>
                         <td>2008</td>
                         <td>Edward Norton</td>
@@ -67,7 +67,7 @@
                            </a>
                         </td>
                       </tr>
-                      <tr class="text-white table-tbody-tr">
+                      <tr class="table-tbody-tr">
                         <th scope="row">Capitan America: The First Avenger</th>
                         <td>2011</td>
                         <td>Cris Evans</td>
@@ -77,7 +77,7 @@
                             </a>
                         </td>
                       </tr>
-                      <tr class="text-white table-tbody-tr2">
+                      <tr class="table-tbody-tr2">
                         <th scope="row">Thor</th>
                         <td>2011</td>
                         <td>Cris Hemsworth</td>
@@ -87,7 +87,7 @@
                            </a>
                         </td>
                       </tr>
-                      <tr class="text-white table-tbody-tr">
+                      <tr class="table-tbody-tr">
                         <th scope="row">Black Widow</th>
                         <td>2021</td>
                         <td>Scarlett Johansson</td>
