agrego extend en peliculas y main

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -2,13 +2,13 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Universo Cinematografico de Marvel - Contacto para mas datos</title>
     <link rel="shortcut icon" href="../assets/images/favicon.ico" />
     <link rel="stylesheet" href="../css/style.css" />
-    <meta name="description" content="Contáctanos y recibí toda la info de tus películas favoritas">
+    <meta name="description" content="Contáctanos y recibí toda la info de tus películas favoritas"/>
     
 </head>
 
