--- a/index.html
+++ b/index.html
@@ -5,48 +5,53 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Universo Cinematografico de Marvel - Sus peliculas</title>
+    <title>Universo Cinematografico de Marvel - Sus películas</title>
     <link rel="shortcut icon" href="./assets/images/favicon.ico" />
     <link rel="stylesheet" href="./css/style.css" />
-    <meta name="description" content="Una página que te cuenta el Universo de películas Marvel desde el principio.">
+    <meta name="description" content="Una página que te cuenta el Universo de películas Marvel desde el principio." />
 </head>
 
 <body>
     <header>
         <a class="grid-logo" href="./index.html">
-            <img class="grid-logo-item" src="./assets/images/mcu.png" alt="MCU-Home" >
+            <img class="grid-logo-item" src="./assets/images/mcu.png" alt="MCU-Home">
         </a>
-        <h1 class="subtitulo">Un universo de películas Heroicas y sus protagonistas</h1>
+        <h1 class="subtitulo">Un universo de películas Heróicas y sus protagonistas</h1>
         <nav>
             <ul class="estilo-ul">
                 <li class="estilo-nav-li  btn-index"><a class="estilo-a" href="./index.html">Home</a></li>
-                <li class="estilo-nav-li  btn-peliculas"><a class="estilo-a" href="./pages/peliculas.html">Peliculas</a></li>
-                <li class="estilo-nav-li  btn-cronologia"><a class="estilo-a" href="./pages/cronologia.html">Cronologia</a></li>
-                <li class="estilo-nav-li  btn-contacto"><a class="estilo-a" href="./pages/contacto.html">Contacto</a></li>
+                <li class="estilo-nav-li  btn-peliculas"><a class="estilo-a" href="./pages/peliculas.html">Películas</a></li>
+                <li class="estilo-nav-li  btn-cronologia"><a class="estilo-a" href="./pages/cronologia.html">Cronología</a></li>
+                <li class="estilo-nav-li  btn-contacto"><a class="estilo-a" href="./pages/contacto.html">Contacto</a></li>              
             </ul>
         </nav>
     </header>
     <main class="parallax">
-        <div >
+        <div>
 
-            <section class="estilo-section-div1" >
-                <a class="grid__item" href="https://en.wikipedia.org/wiki/Tony_Stark_(Marvel_Cinematic_Universe)" target="_blank">
-                    <img class="grid__item-img"  src="./assets/gif/ironman.gif" alt="Película de Ironman"  />
+            <section class="section-div1">
+                <a class="grid__item" href="https://en.wikipedia.org/wiki/Tony_Stark_(Marvel_Cinematic_Universe)"
+                    target="_blank">
+                    <img class="grid__item-img" src="./assets/gif/ironman.gif" alt="Película de Ironman" />
                 </a>
-                <a class="grid__item" href="https://en.wikipedia.org/wiki/Steve_Rogers_(Marvel_Cinematic_Universe)" target="_blank">
+                <a class="grid__item" href="https://en.wikipedia.org/wiki/Steve_Rogers_(Marvel_Cinematic_Universe)"
+                    target="_blank">
                     <img class="grid__item-img" src="./assets/gif/capitan.gif" alt="Película de Capitán América" />
                 </a>
             </section>
 
-            <section class="estilo-section-div2" >
-                <a class="grid__item" href="https://en.wikipedia.org/wiki/Thor_(Marvel_Cinematic_Universe)" target="_blank">
-                    <img class="grid__item-img"  src="./assets/gif/thor.gif" alt="Película de Thor"  />
+            <section class="section-div2">
+                <a class="grid__item" href="https://en.wikipedia.org/wiki/Thor_(Marvel_Cinematic_Universe)"
+                    target="_blank">
+                    <img class="grid__item-img" src="./assets/gif/thor.gif" alt="Película de Thor" />
                 </a>
-                <a class="grid__item" href="https://en.wikipedia.org/wiki/Bruce_Banner_(Marvel_Cinematic_Universe)" target="_blank">
-                    <img class="grid__item-img"  src="./assets/gif/hulk.gif" alt="Película de Hulk"  />
+                <a class="grid__item" href="https://en.wikipedia.org/wiki/Bruce_Banner_(Marvel_Cinematic_Universe)"
+                    target="_blank">
+                    <img class="grid__item-img" src="./assets/gif/hulk.gif" alt="Película de Hulk" />
                 </a>
-                <a class="grid__item" href="https://en.wikipedia.org/wiki/Natasha_Romanoff_(Marvel_Cinematic_Universe)" target="_blank">
-                    <img class="grid__item-img"  src="./assets/gif/nat.gif" alt="Película de Natasha Romanoff"  />
+                <a class="grid__item" href="https://en.wikipedia.org/wiki/Natasha_Romanoff_(Marvel_Cinematic_Universe)"
+                    target="_blank">
+                    <img class="grid__item-img" src="./assets/gif/nat.gif" alt="Película de Natasha Romanoff" />
                 </a>
             </section>
         </div>
@@ -66,15 +71,18 @@
                 ellos en un solo universo,
                 algo no visto antes en el cine de superhéroes.
             </p>
-            <p class="texto2">La primera película del MCU es Iron Man (2008), que comenzó las películas de la Fase Uno culminando en la 
-                película crossover, The Avengers (2012). La Fase Dos comenzó con Iron Man 3 (2013) y concluyó con Ant-Man 
+            <p class="texto2">La primera película del MCU es Iron Man (2008), que comenzó las películas de la Fase Uno
+                culminando en la
+                película crossover, The Avengers (2012). La Fase Dos comenzó con Iron Man 3 (2013) y concluyó con
+                Ant-Man
                 (2015). La Fase Tres comenzó con Captain America: Civil War (2016) y concluyó con Spider-Man: Lejos de
-                 casa (2019). Las primeras tres fases de la franquicia se conocen colectivamente como «La saga Infinity».
-                 Las películas de la Fase Cuatro comenzaron con Black Widow (2021).
+                casa (2019). Las primeras tres fases de la franquicia se conocen colectivamente como «La saga Infinity».
+                Las películas de la Fase Cuatro comenzaron con Black Widow (2021).
             </p>
         </section>
         <section class="grid__video">
-            <video class="grid__video-item" src="./assets/videos/Avengers Endgame.mp4" controls autoplay muted loop></video>
+            <video class="grid__video-item" src="./assets/videos/Avengers Endgame.mp4" controls autoplay muted
+                loop></video>
             <video class="grid__video-item" src="./assets/videos/Black Widow.mp4" controls autoplay muted loop></video>
         </section>
     </main>
@@ -93,7 +101,7 @@
                 <img class="estilo-a-footer link-whatsapp" src="./assets/images/whatsapp.png" alt="whatsapp" />
             </a>
             <h4>&copy 2022, MITCH todos los derechos reservados</h4>
-         
+
             <label for="suscripcion">Suscribite a nuestro newsletter:</label>
             <input type="email" id="correo" name="correo" placeholder="Ingrese su mail" />
             <button type="submit">Enviar</button>
