--- a/pages/cronologia.html
+++ b/pages/cronologia.html
@@ -2,13 +2,13 @@
 <html lang="es">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Universo Cinematografico de Marvel - Cronologia de Peliculas</title>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Universo Cinematográfico de Marvel - Cronología de Películas</title>
     <link rel="shortcut icon" href="../assets/images/favicon.ico" />
     <link rel="stylesheet" href="../css/style.css" />
-    <meta name="description" content="El Universo de películas Marvel, su orden de el universo.">
+    <meta name="description" content="El Universo de películas Marvel, su orden de estreno y cronológico."/>
 
 </head>
 
@@ -23,9 +23,8 @@
         <nav>
             <ul class="estilo-ul">
                 <li class="estilo-nav-li  btn-index"><a class="estilo-a" href="../index.html">Home</a></li>
-                <li class="estilo-nav-li  btn-peliculas"><a class="estilo-a" href="./peliculas.html">Peliculas</a></li>
-                <li class="estilo-nav-li  btn-cronologia"><a class="estilo-a" href="./cronologia.html">Cronologia</a>
-                </li>
+                <li class="estilo-nav-li  btn-peliculas"><a class="estilo-a" href="./peliculas.html">Películas</a></li>
+                <li class="estilo-nav-li  btn-cronologia"><a class="estilo-a" href="./cronologia.html">Cronología</a></li>
                 <li class="estilo-nav-li  btn-contacto"><a class="estilo-a" href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
@@ -49,7 +48,7 @@
                 </div>
                 <div>
                     <ol class="crono-item">
-                        <li class="list-group-item">Capitan America:El Primer Vengador</li>
+                        <li class="list-group-item">Capitán America:El Primer Vengador</li>
                         <li class="list-group-item">Capitana Marvel</li>
                         <li class="list-group-item">Ironman</li>
                         <li class="list-group-item">Ironman 2</li>
@@ -58,7 +57,7 @@
                         <li class="list-group-item">Los Vengadores</li>
                         <li class="list-group-item">Ironman 3</li>
                         <li class="list-group-item">Thor: El mundo oscuro</li>
-                        <li class="list-group-item">Capitan America: El soldado de invierno</li>
+                        <li class="list-group-item">Capitán America: El soldado de invierno</li>
                         <li class="list-group-item">Guardianes de la galaxia</li>
                     </ol>
                 </div>
@@ -72,10 +71,10 @@
                             <ol class="crono-item">
                                 <li class="list-group-item">2008: "Ironman", "El increible Hulk"</li>
                                 <li class="list-group-item">2010: "Ironman 2"</li>
-                                <li class="list-group-item">2011: "Thor", "Capitan America:El Primer Vengador"</li>
+                                <li class="list-group-item">2011: "Thor", "Capitán America:El Primer Vengador"</li>
                                 <li class="list-group-item">2012: "Los Vengadores"</li>
                                 <li class="list-group-item">2013: "Ironman 3", "Thor: El mundo oscuro"</li>
-                                <li class="list-group-item">2014: "Capitan America: El soldado de invierno", "Guardianes
+                                <li class="list-group-item">2014: "Capitán America: El soldado de invierno", "Guardianes
                                     de la galaxia"</li>
                                 <li class="list-group-item">2015: "Vengadores: La era de Ultron", "Antman"</li>
                                 <li class="list-group-item">2016: "Capitán América: Civil War", "Doctor Strange"</li>
