--- a/pages/peliculas.html
+++ b/pages/peliculas.html
@@ -2,14 +2,13 @@
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Universo Cinematografico de Marvel - Peliculas Directores Protagonistas</title>
+  <meta charset="UTF-8"/>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Universo Cinematográfico de Marvel - Películas Directores Protagonistas</title>
   <link rel="shortcut icon" href="../assets/images/favicon.ico" />
   <link rel="stylesheet" href="../css/style.css" />
-  <meta name="description"
-    content="Una página que te cuenta el Universo de películas Marvel, sus protagonistas e historia.">
+  <meta name="description" content="Una página que te cuenta el Universo de películas Marvel, sus protagonistas e historia."/>
 
 </head>
 
@@ -19,13 +18,13 @@
       <img class="grid-logo-item" src="../assets/images/mcu.png" alt="MCU-Home">
     </a>
 
-    <h1 class="subtitulo">Películas Heroicas que dieron inicio al universo y sus protagonistas</h1>
+    <h1 class="subtitulo">Películas Heróicas que dieron inicio al universo y sus protagonistas</h1>
 
     <nav>
       <ul class="estilo-ul">
         <li class="estilo-nav-li  btn-index"><a class="estilo-a" href="../index.html">Home</a></li>
-        <li class="estilo-nav-li  btn-peliculas"><a class="estilo-a" href="./peliculas.html">Peliculas</a></li>
-        <li class="estilo-nav-li  btn-cronologia"><a class="estilo-a" href="./cronologia.html">Cronologia</a></li>
+        <li class="estilo-nav-li  btn-peliculas"><a class="estilo-a" href="./peliculas.html">Películas</a></li>
+        <li class="estilo-nav-li  btn-cronologia"><a class="estilo-a" href="./cronologia.html">Cronología</a></li>
         <li class="estilo-nav-li  btn-contacto"><a class="estilo-a" href="./contacto.html">Contacto</a></li>
       </ul>
     </nav>
@@ -61,7 +60,7 @@
 
       <table class="table">
         <thead>
-          <tr class="table-thead-tr">
+          <tr class="thead-tr">
             <th scope="col">Nombre</th>
             <th scope="col">Año</th>
             <th scope="col">Protagonista</th>
@@ -71,7 +70,7 @@
         </thead>
 
         <tbody>
-          <tr class="table-tbody-tr">
+          <tr class="tbody-tr">
             <th scope="row">Ironman</th>
             <td>2008</td>
             <td>Robert Downey Jr</td>
@@ -81,8 +80,8 @@
               </a>
             </td>
           </tr>
-          <tr class="table-tbody-tr2">
-            <th scope="row">The Incredible Hulk</th>
+          <tr class="tbody-tr2">
+            <th scope="row">The Increíble Hulk</th>
             <td>2008</td>
             <td>Edward Norton</td>
             <td>Louis Leterrier</td>
@@ -91,8 +90,8 @@
               </a>
             </td>
           </tr>
-          <tr class="table-tbody-tr">
-            <th scope="row">Capitan America: The First Avenger</th>
+          <tr class="tbody-tr">
+            <th scope="row">Capitán America: The First Avenger</th>
             <td>2011</td>
             <td>Cris Evans</td>
             <td>Joe Johnston</td>
@@ -101,7 +100,7 @@
               </a>
             </td>
           </tr>
-          <tr class="table-tbody-tr2">
+          <tr class="tbody-tr2">
             <th scope="row">Thor</th>
             <td>2011</td>
             <td>Cris Hemsworth</td>
@@ -111,7 +110,7 @@
               </a>
             </td>
           </tr>
-          <tr class="table-tbody-tr">
+          <tr class="tbody-tr">
             <th scope="row">Black Widow</th>
             <td>2021</td>
             <td>Scarlett Johansson</td>
