correccion de textos en parrafos

--- a/index.html
+++ b/index.html
@@ -20,9 +20,12 @@
         <nav>
             <ul class="estilo-ul">
                 <li class="estilo-nav-li  btn-index"><a class="estilo-a" href="./index.html">Home</a></li>
-                <li class="estilo-nav-li  btn-peliculas"><a class="estilo-a" href="./pages/peliculas.html">Películas</a></li>
-                <li class="estilo-nav-li  btn-cronologia"><a class="estilo-a" href="./pages/cronologia.html">Cronología</a></li>
-                <li class="estilo-nav-li  btn-contacto"><a class="estilo-a" href="./pages/contacto.html">Contacto</a></li>              
+                <li class="estilo-nav-li  btn-peliculas"><a class="estilo-a" href="./pages/peliculas.html">Películas</a>
+                </li>
+                <li class="estilo-nav-li  btn-cronologia"><a class="estilo-a"
+                        href="./pages/cronologia.html">Cronología</a></li>
+                <li class="estilo-nav-li  btn-contacto"><a class="estilo-a" href="./pages/contacto.html">Contacto</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -71,13 +74,16 @@
                 ellos en un solo universo,
                 algo no visto antes en el cine de superhéroes.
             </p>
-            <p class="texto2">La primera película del MCU es Iron Man (2008), que comenzó las películas de la Fase Uno
-                culminando en la
-                película crossover, The Avengers (2012). La Fase Dos comenzó con Iron Man 3 (2013) y concluyó con
-                Ant-Man
-                (2015). La Fase Tres comenzó con Captain America: Civil War (2016) y concluyó con Spider-Man: Lejos de
-                casa (2019). Las primeras tres fases de la franquicia se conocen colectivamente como «La saga Infinity».
-                Las películas de la Fase Cuatro comenzaron con Black Widow (2021).
+            <p class="texto2">En 2005, Marvel Entertainment comenzó a producir de forma independiente sus propias
+                películas y a distribuirlas a través de Paramount Pictures. Anteriormente, el estudio había
+                coproducido varias películas de superhéroes con Columbia Pictures, New Line Cinema y otras, entre ellos
+                un acuerdo de desarrollo de siete años con 20th Century Fox. Marvel generaba relativamente pocas
+                ganancias de sus acuerdos de licencia con otros estudios y quería obtener más dinero de sus películas
+                manteniendo el control artístico de los proyectos y la distribución. Avi Arad, director de la división
+                de películas de Marvel, estuvo satisfecho con las películas de Spider-Man de Sam Raimi, pero no lo
+                estuvo con las demás. Como resultado, se decidió formar Marvel Studios, el primer estudio de cine
+                independiente importante desde DreamWorks.
+                
             </p>
         </section>
         <section class="grid__video">
