--- a/pages/peliculas.html
+++ b/pages/peliculas.html
@@ -42,17 +42,15 @@
           destruido a causa de la superpoblación. Sin embargo, esto lo llevaría a tener diversos enfrentamientos con
           distintos equipos de superhéroes tales como los Vengadores y los Guardianes de la Galaxia.
         </p>
-        <h2 class="subtitulo">Iniciativa Vengadores</h2>
+        
         <p class="texto2">
-          Anthony Stark, siendo un genio inventivo, se volvió un hombre de negocios exitoso y mejoró Industrias Stark
-          hasta que en 2009, durante un viaje a Afganistán, el convoy de Stark fue emboscado por los Diez Anillos, y fue
-          hecho prisionero y obligado a desarrollar armas para la organización. Stark escapó de sus captores mediante la
-          construcción de un traje de batalla con ayuda de Ho Yinsen, quien se sacrificó para garantizar su escape y,
-          como resultado, Stark alejó su empresa del camino de la violencia, mientras construía una serie de trajes de
-          batalla de alta tecnología, los cuales esperaba utilizar para lograr la paz mundial. Las acciones de
-          vigilancia de Stark llamaron la atención de S.H.I.E.L.D. y tuvieron el efecto de marcar el origen de una nueva
-          era de superhéroes y, asumiendo el apodo que recibió de la prensa tras derrotar a Obadiah Stane de hacerse con
-          su tecnología, Stark comenzó a referirse públicamente a su persona heroica como Iron Man.
+          La primera película del MCU es Iron Man (2008), que comenzó las películas de la Fase Uno
+          culminando en la
+          película crossover, The Avengers (2012). La Fase Dos comenzó con Iron Man 3 (2013) y concluyó con
+          Ant-Man
+          (2015). La Fase Tres comenzó con Captain America: Civil War (2016) y concluyó con Spider-Man: Lejos de
+          casa (2019). Las primeras tres fases de la franquicia se conocen colectivamente como «La saga Infinity».
+          Las películas de la Fase Cuatro comenzaron con Black Widow (2021).
         </p>
       </div>
 
