--- a/pages/cronologia.html
+++ b/pages/cronologia.html
@@ -44,7 +44,7 @@
             <h2 class="h2-cronologia">Orden Cronológico</h2>
             <div class="estilo-section-crono">
                 <div>
-                    <img class="crono-item" src="../assets/images/crono-recorte.JPG" alt="cronologia" />
+                    <img class="crono-item" src="../assets/images/crono-recorte.JPG" alt="imagen cronologia" />
                 </div>
                 <div>
                     <ol class="crono-item">
@@ -87,7 +87,7 @@
                             </ol>
                         </div>
                         <div>
-                            <img class="crono-item" src="../assets/images/aparicion-recorte.JPG" alt="aparicion" />
+                            <img class="crono-item" src="../assets/images/aparicion-recorte.JPG" alt="imagen orden aparicion" />
                         </div>
                     </div>
                     <div>
